--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ ignored-classes = ["Ice"]
 [[tool.mypy.overrides]]
 module = [
   "Ice",
-  "RemoteTypes"
+  "RemoteTypes",
+  "remotetypes_ice"
 ]
 ignore_missing_imports = true
